--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,15 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>settings</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.1.1-SNAPSHOT</version>
+		<version>0.1.1</version>
 	</parent>
+
+	<artifactId>settings</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<description>Java development settings</description>
 	<url>https://github.com/spt-oss/settings</url>
@@ -27,6 +27,24 @@
 			<id>central</id>
 			<url>http://repo.maven.apache.org/maven2</url>
 		</repository>
+		<repository>
+			<id>sonatype</id>
+			<url>https://oss.sonatype.org/content/groups/public</url>
+		</repository>
 	</repositories>
+
+	<profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
