--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.1.1</version>
+		<version>0.1.6</version>
 	</parent>
 
 	<artifactId>settings</artifactId>
 	<version>0.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<description>Java development settings</description>
+	<description>The Java development settings</description>
 	<url>https://github.com/spt-oss/settings</url>
 
 	<scm>
@@ -29,13 +29,13 @@
 		</repository>
 		<repository>
 			<id>sonatype</id>
-			<url>https://oss.sonatype.org/content/groups/public</url>
+			<url>https://oss.sonatype.org/content/groups/staging</url>
 		</repository>
 	</repositories>
 
 	<profiles>
 		<profile>
-			<id>release</id>
+			<id>gpg</id>
 			<build>
 				<plugins>
 					<plugin>
