--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.1.11</version>
+		<version>0.5.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>settings</artifactId>
