--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,6 @@
-# --------------------------------------
-#
-# .gitignore
-#
-# --------------------------------------
-
-#
-# Ignore: IDE config files
-#
-
 .*
+!.circle
+!.gitignore
+!.gitkeep
 
-#
-# Enable: Git config files
-#
-
-!.git*
-
-#
-# Ignore: Maven build files
-#
-
-target/
-pom.xml.*
-release.properties
-
-# --------------------------------------
+target
