--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
-		<artifactId>spring-boot-starter-parent-plus</artifactId>
+		<artifactId>java-parent</artifactId>
 		<version>1.5.3.0-SNAPSHOT</version>
 	</parent>
 
@@ -18,7 +18,7 @@
 
 	<scm>
 		<url>https://github.com/spt-oss/java-settings/tree/master</url>
-		<connection>scm:git:git@java-settings.spt-oss.github.com:spt-oss/java-settings.git</connection>
+		<connection>scm:git:git@github.com:spt-oss/java-settings.git</connection>
 		<tag>HEAD</tag>
 	</scm>
 
