fix java config [ci skip]

--- a/src/main/resources/spt/settings/eclipse/.gitignore
+++ b/src/main/resources/spt/settings/eclipse/.gitignore
@@ -1,13 +1,3 @@
-# --------------------------------------
-#
-# .gitignore
-#
-# --------------------------------------
-
-#
-# Enable: IDE config files
-#
-
-!.*
-
-# --------------------------------------
+!.checkstyle
+!.classpath
+!.settings
