--- a/src/main/resources/spt/settings/eclipse/project/lombok.config
+++ b/src/main/resources/spt/settings/eclipse/project/lombok.config
@@ -1,5 +1,5 @@
 ##
-## Lombok Configuration (1.16.10)
+## Lombok Configuration (1.16.16)
 ##
 ## http://projectlombok.org/features/configuration.html
 ##
@@ -31,8 +31,6 @@ config.stopBubbling = true
 # lombok.accessors.chain = [false | true]
 #
 
-clear lombok.accessors.chain
-
 ##
 ## Key : lombok.accessors.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -42,10 +40,8 @@ clear lombok.accessors.chain
 ## Examples:
 #
 # clear lombok.accessors.flagUsage
-# lombok.accessors.flagUsage = [WARNING | ERROR]
+# lombok.accessors.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.accessors.flagUsage
 
 ##
 ## Key : lombok.accessors.fluent
@@ -58,8 +54,6 @@ clear lombok.accessors.flagUsage
 # clear lombok.accessors.fluent
 # lombok.accessors.fluent = [false | true]
 #
-
-clear lombok.accessors.fluent
 
 ##
 ## Key : lombok.accessors.prefix
@@ -74,13 +68,11 @@ clear lombok.accessors.fluent
 # lombok.accessors.prefix -= <text>
 #
 
-clear lombok.accessors.prefix
-
 ##
 ## Key : lombok.addGeneratedAnnotation
 ## Type: boolean
 ##
-## Generate @javax.annotation.Generated on all generated code (default: true).
+## Generate @javax.annotation.Generated on all generated code (default: true). Deprecated, use 'lombok.addJavaxGeneratedAnnotation' instead.
 ##
 ## Examples:
 #
@@ -88,7 +80,29 @@ clear lombok.accessors.prefix
 # lombok.addGeneratedAnnotation = [false | true]
 #
 
-clear lombok.addGeneratedAnnotation
+##
+## Key : lombok.addJavaxGeneratedAnnotation
+## Type: boolean
+##
+## Generate @javax.annotation.Generated on all generated code (default: follow lombok.addGeneratedAnnotation).
+##
+## Examples:
+#
+# clear lombok.addJavaxGeneratedAnnotation
+# lombok.addJavaxGeneratedAnnotation = [false | true]
+#
+
+##
+## Key : lombok.addLombokGeneratedAnnotation
+## Type: boolean
+##
+## Generate @lombok.Generated on all generated code (default: false).
+##
+## Examples:
+#
+# clear lombok.addLombokGeneratedAnnotation
+# lombok.addLombokGeneratedAnnotation = [false | true]
+#
 
 ##
 ## Key : lombok.allArgsConstructor.flagUsage
@@ -99,10 +113,8 @@ clear lombok.addGeneratedAnnotation
 ## Examples:
 #
 # clear lombok.allArgsConstructor.flagUsage
-# lombok.allArgsConstructor.flagUsage = [WARNING | ERROR]
+# lombok.allArgsConstructor.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.allArgsConstructor.flagUsage
 
 ##
 ## Key : lombok.anyConstructor.flagUsage
@@ -113,10 +125,8 @@ clear lombok.allArgsConstructor.flagUsage
 ## Examples:
 #
 # clear lombok.anyConstructor.flagUsage
-# lombok.anyConstructor.flagUsage = [WARNING | ERROR]
+# lombok.anyConstructor.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.anyConstructor.flagUsage
 
 ##
 ## Key : lombok.anyConstructor.suppressConstructorProperties
@@ -130,8 +140,6 @@ clear lombok.anyConstructor.flagUsage
 # lombok.anyConstructor.suppressConstructorProperties = [false | true]
 #
 
-clear lombok.anyConstructor.suppressConstructorProperties
-
 ##
 ## Key : lombok.builder.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -141,10 +149,8 @@ clear lombok.anyConstructor.suppressConstructorProperties
 ## Examples:
 #
 # clear lombok.builder.flagUsage
-# lombok.builder.flagUsage = [WARNING | ERROR]
+# lombok.builder.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.builder.flagUsage
 
 ##
 ## Key : lombok.cleanup.flagUsage
@@ -155,11 +161,8 @@ clear lombok.builder.flagUsage
 ## Examples:
 #
 # clear lombok.cleanup.flagUsage
-# lombok.cleanup.flagUsage = [WARNING | ERROR]
+# lombok.cleanup.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.cleanup.flagUsage
-lombok.cleanup.flagUsage = WARNING
 
 ##
 ## Key : lombok.data.flagUsage
@@ -170,10 +173,8 @@ lombok.cleanup.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.data.flagUsage
-# lombok.data.flagUsage = [WARNING | ERROR]
+# lombok.data.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.data.flagUsage
 
 ##
 ## Key : lombok.delegate.flagUsage
@@ -184,11 +185,8 @@ clear lombok.data.flagUsage
 ## Examples:
 #
 # clear lombok.delegate.flagUsage
-# lombok.delegate.flagUsage = [WARNING | ERROR]
+# lombok.delegate.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.delegate.flagUsage
-lombok.cleanup.flagUsage = WARNING
 
 ##
 ## Key : lombok.equalsAndHashCode.callSuper
@@ -202,8 +200,6 @@ lombok.cleanup.flagUsage = WARNING
 # lombok.equalsAndHashCode.callSuper = [CALL | SKIP | WARN]
 #
 
-clear lombok.equalsAndHashCode.callSuper
-
 ##
 ## Key : lombok.equalsAndHashCode.doNotUseGetters
 ## Type: boolean
@@ -216,8 +212,6 @@ clear lombok.equalsAndHashCode.callSuper
 # lombok.equalsAndHashCode.doNotUseGetters = [false | true]
 #
 
-clear lombok.equalsAndHashCode.doNotUseGetters
-
 ##
 ## Key : lombok.equalsAndHashCode.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -227,10 +221,8 @@ clear lombok.equalsAndHashCode.doNotUseGetters
 ## Examples:
 #
 # clear lombok.equalsAndHashCode.flagUsage
-# lombok.equalsAndHashCode.flagUsage = [WARNING | ERROR]
+# lombok.equalsAndHashCode.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.equalsAndHashCode.flagUsage
 
 ##
 ## Key : lombok.experimental.flagUsage
@@ -241,10 +233,8 @@ clear lombok.equalsAndHashCode.flagUsage
 ## Examples:
 #
 # clear lombok.experimental.flagUsage
-# lombok.experimental.flagUsage = [WARNING | ERROR]
+# lombok.experimental.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.experimental.flagUsage
 
 ##
 ## Key : lombok.extensionMethod.flagUsage
@@ -255,11 +245,8 @@ clear lombok.experimental.flagUsage
 ## Examples:
 #
 # clear lombok.extensionMethod.flagUsage
-# lombok.extensionMethod.flagUsage = [WARNING | ERROR]
+# lombok.extensionMethod.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.extensionMethod.flagUsage
-lombok.extensionMethod.flagUsage = WARNING
 
 ##
 ## Key : lombok.extern.findbugs.addSuppressFBWarnings
@@ -273,8 +260,6 @@ lombok.extensionMethod.flagUsage = WARNING
 # lombok.extern.findbugs.addSuppressFBWarnings = [false | true]
 #
 
-clear lombok.extern.findbugs.addSuppressFBWarnings
-
 ##
 ## Key : lombok.fieldDefaults.defaultFinal
 ## Type: boolean
@@ -286,8 +271,6 @@ clear lombok.extern.findbugs.addSuppressFBWarnings
 # clear lombok.fieldDefaults.defaultFinal
 # lombok.fieldDefaults.defaultFinal = [false | true]
 #
-
-clear lombok.fieldDefaults.defaultFinal
 
 ##
 ## Key : lombok.fieldDefaults.defaultPrivate
@@ -301,8 +284,6 @@ clear lombok.fieldDefaults.defaultFinal
 # lombok.fieldDefaults.defaultPrivate = [false | true]
 #
 
-clear lombok.fieldDefaults.defaultPrivate
-
 ##
 ## Key : lombok.fieldDefaults.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -312,11 +293,8 @@ clear lombok.fieldDefaults.defaultPrivate
 ## Examples:
 #
 # clear lombok.fieldDefaults.flagUsage
-# lombok.fieldDefaults.flagUsage = [WARNING | ERROR]
+# lombok.fieldDefaults.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.fieldDefaults.flagUsage
-lombok.fieldDefaults.flagUsage = WARNING
 
 ##
 ## Key : lombok.getter.flagUsage
@@ -327,10 +305,8 @@ lombok.fieldDefaults.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.getter.flagUsage
-# lombok.getter.flagUsage = [WARNING | ERROR]
+# lombok.getter.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.getter.flagUsage
 
 ##
 ## Key : lombok.getter.lazy.flagUsage
@@ -341,10 +317,8 @@ clear lombok.getter.flagUsage
 ## Examples:
 #
 # clear lombok.getter.lazy.flagUsage
-# lombok.getter.lazy.flagUsage = [WARNING | ERROR]
+# lombok.getter.lazy.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.getter.lazy.flagUsage
 
 ##
 ## Key : lombok.getter.noIsPrefix
@@ -358,8 +332,6 @@ clear lombok.getter.lazy.flagUsage
 # lombok.getter.noIsPrefix = [false | true]
 #
 
-clear lombok.getter.noIsPrefix
-
 ##
 ## Key : lombok.helper.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -369,11 +341,8 @@ clear lombok.getter.noIsPrefix
 ## Examples:
 #
 # clear lombok.helper.flagUsage
-# lombok.helper.flagUsage = [WARNING | ERROR]
+# lombok.helper.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.helper.flagUsage
-lombok.helper.flagUsage = WARNING
 
 ##
 ## Key : lombok.log.apacheCommons.flagUsage
@@ -384,11 +353,8 @@ lombok.helper.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.log.apacheCommons.flagUsage
-# lombok.log.apacheCommons.flagUsage = [WARNING | ERROR]
+# lombok.log.apacheCommons.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.log.apacheCommons.flagUsage
-lombok.log.apacheCommons.flagUsage = WARNING
 
 ##
 ## Key : lombok.log.fieldIsStatic
@@ -401,8 +367,6 @@ lombok.log.apacheCommons.flagUsage = WARNING
 # clear lombok.log.fieldIsStatic
 # lombok.log.fieldIsStatic = [false | true]
 #
-
-clear lombok.log.fieldIsStatic
 
 ##
 ## Key : lombok.log.fieldName
@@ -428,11 +392,8 @@ lombok.log.fieldName = logger
 ## Examples:
 #
 # clear lombok.log.flagUsage
-# lombok.log.flagUsage = [WARNING | ERROR]
+# lombok.log.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.log.flagUsage
-lombok.log.flagUsage = WARNING
 
 ##
 ## Key : lombok.log.javaUtilLogging.flagUsage
@@ -443,11 +404,20 @@ lombok.log.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.log.javaUtilLogging.flagUsage
-# lombok.log.javaUtilLogging.flagUsage = [WARNING | ERROR]
+# lombok.log.javaUtilLogging.flagUsage = [WARNING | ERROR | ALLOW]
 #
 
-clear lombok.log.javaUtilLogging.flagUsage
-lombok.log.javaUtilLogging.flagUsage = WARNING
+##
+## Key : lombok.log.jbosslog.flagUsage
+## Type: enum (lombok.core.configuration.FlagUsageType)
+##
+## Emit a warning or error if @JBossLog is used.
+##
+## Examples:
+#
+# clear lombok.log.jbosslog.flagUsage
+# lombok.log.jbosslog.flagUsage = [WARNING | ERROR | ALLOW]
+#
 
 ##
 ## Key : lombok.log.log4j.flagUsage
@@ -458,11 +428,8 @@ lombok.log.javaUtilLogging.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.log.log4j.flagUsage
-# lombok.log.log4j.flagUsage = [WARNING | ERROR]
+# lombok.log.log4j.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.log.log4j.flagUsage
-lombok.log.log4j.flagUsage = WARNING
 
 ##
 ## Key : lombok.log.log4j2.flagUsage
@@ -473,11 +440,8 @@ lombok.log.log4j.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.log.log4j2.flagUsage
-# lombok.log.log4j2.flagUsage = [WARNING | ERROR]
+# lombok.log.log4j2.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.log.log4j2.flagUsage
-lombok.log.log4j2.flagUsage = WARNING
 
 ##
 ## Key : lombok.log.slf4j.flagUsage
@@ -488,11 +452,8 @@ lombok.log.log4j2.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.log.slf4j.flagUsage
-# lombok.log.slf4j.flagUsage = [WARNING | ERROR]
+# lombok.log.slf4j.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.log.slf4j.flagUsage
-lombok.log.slf4j.flagUsage = WARNING
 
 ##
 ## Key : lombok.log.xslf4j.flagUsage
@@ -503,11 +464,8 @@ lombok.log.slf4j.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.log.xslf4j.flagUsage
-# lombok.log.xslf4j.flagUsage = [WARNING | ERROR]
+# lombok.log.xslf4j.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.log.xslf4j.flagUsage
-lombok.log.xslf4j.flagUsage = WARNING
 
 ##
 ## Key : lombok.noArgsConstructor.flagUsage
@@ -518,10 +476,8 @@ lombok.log.xslf4j.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.noArgsConstructor.flagUsage
-# lombok.noArgsConstructor.flagUsage = [WARNING | ERROR]
+# lombok.noArgsConstructor.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.noArgsConstructor.flagUsage
 
 ##
 ## Key : lombok.nonNull.exceptionType
@@ -547,10 +503,8 @@ lombok.nonNull.exceptionType = IllegalArgumentException
 ## Examples:
 #
 # clear lombok.nonNull.flagUsage
-# lombok.nonNull.flagUsage = [WARNING | ERROR]
+# lombok.nonNull.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.nonNull.flagUsage
 
 ##
 ## Key : lombok.requiredArgsConstructor.flagUsage
@@ -561,10 +515,8 @@ clear lombok.nonNull.flagUsage
 ## Examples:
 #
 # clear lombok.requiredArgsConstructor.flagUsage
-# lombok.requiredArgsConstructor.flagUsage = [WARNING | ERROR]
+# lombok.requiredArgsConstructor.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.requiredArgsConstructor.flagUsage
 
 ##
 ## Key : lombok.setter.flagUsage
@@ -575,10 +527,8 @@ clear lombok.requiredArgsConstructor.flagUsage
 ## Examples:
 #
 # clear lombok.setter.flagUsage
-# lombok.setter.flagUsage = [WARNING | ERROR]
+# lombok.setter.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.setter.flagUsage
 
 ##
 ## Key : lombok.singular.auto
@@ -592,8 +542,6 @@ clear lombok.setter.flagUsage
 # lombok.singular.auto = [false | true]
 #
 
-clear lombok.singular.auto
-
 ##
 ## Key : lombok.singular.useGuava
 ## Type: boolean
@@ -606,8 +554,6 @@ clear lombok.singular.auto
 # lombok.singular.useGuava = [false | true]
 #
 
-clear lombok.singular.useGuava
-
 ##
 ## Key : lombok.sneakyThrows.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -617,11 +563,8 @@ clear lombok.singular.useGuava
 ## Examples:
 #
 # clear lombok.sneakyThrows.flagUsage
-# lombok.sneakyThrows.flagUsage = [WARNING | ERROR]
+# lombok.sneakyThrows.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.sneakyThrows.flagUsage
-lombok.sneakyThrows.flagUsage = WARNING
 
 ##
 ## Key : lombok.synchronized.flagUsage
@@ -632,10 +575,8 @@ lombok.sneakyThrows.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.synchronized.flagUsage
-# lombok.synchronized.flagUsage = [WARNING | ERROR]
+# lombok.synchronized.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.synchronized.flagUsage
 
 ##
 ## Key : lombok.toString.doNotUseGetters
@@ -649,8 +590,6 @@ clear lombok.synchronized.flagUsage
 # lombok.toString.doNotUseGetters = [false | true]
 #
 
-clear lombok.toString.doNotUseGetters
-
 ##
 ## Key : lombok.toString.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -660,10 +599,8 @@ clear lombok.toString.doNotUseGetters
 ## Examples:
 #
 # clear lombok.toString.flagUsage
-# lombok.toString.flagUsage = [WARNING | ERROR]
+# lombok.toString.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.toString.flagUsage
 
 ##
 ## Key : lombok.toString.includeFieldNames
@@ -677,8 +614,6 @@ clear lombok.toString.flagUsage
 # lombok.toString.includeFieldNames = [false | true]
 #
 
-clear lombok.toString.includeFieldNames
-
 ##
 ## Key : lombok.utilityClass.flagUsage
 ## Type: enum (lombok.core.configuration.FlagUsageType)
@@ -688,11 +623,8 @@ clear lombok.toString.includeFieldNames
 ## Examples:
 #
 # clear lombok.utilityClass.flagUsage
-# lombok.utilityClass.flagUsage = [WARNING | ERROR]
+# lombok.utilityClass.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.utilityClass.flagUsage
-lombok.utilityClass.flagUsage = WARNING
 
 ##
 ## Key : lombok.val.flagUsage
@@ -703,11 +635,8 @@ lombok.utilityClass.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.val.flagUsage
-# lombok.val.flagUsage = [WARNING | ERROR]
+# lombok.val.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.val.flagUsage
-lombok.val.flagUsage = WARNING
 
 ##
 ## Key : lombok.value.flagUsage
@@ -718,11 +647,20 @@ lombok.val.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.value.flagUsage
-# lombok.value.flagUsage = [WARNING | ERROR]
+# lombok.value.flagUsage = [WARNING | ERROR | ALLOW]
 #
 
-clear lombok.value.flagUsage
-lombok.value.flagUsage = WARNING
+##
+## Key : lombok.var.flagUsage
+## Type: enum (lombok.core.configuration.FlagUsageType)
+##
+## Emit a warning or error if 'var' is used.
+##
+## Examples:
+#
+# clear lombok.var.flagUsage
+# lombok.var.flagUsage = [WARNING | ERROR | ALLOW]
+#
 
 ##
 ## Key : lombok.wither.flagUsage
@@ -733,9 +671,6 @@ lombok.value.flagUsage = WARNING
 ## Examples:
 #
 # clear lombok.wither.flagUsage
-# lombok.wither.flagUsage = [WARNING | ERROR]
+# lombok.wither.flagUsage = [WARNING | ERROR | ALLOW]
 #
-
-clear lombok.wither.flagUsage
-lombok.wither.flagUsage = WARNING
 
