--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,20 @@
 
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
-		<artifactId>parent</artifactId>
-		<version>0.5.0</version>
+		<artifactId>java-parent</artifactId>
+		<version>1.5.3.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>settings</artifactId>
+	<artifactId>java-settings</artifactId>
 	<version>0.1.11-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<description>Java development settings</description>
-	<url>https://github.com/spt-oss/settings</url>
+	<url>https://github.com/spt-oss/java-settings</url>
 
 	<scm>
-		<url>https://github.com/spt-oss/settings/tree/master</url>
-		<connection>scm:git:git@settings.spt-oss.github.com:spt-oss/settings.git</connection>
+		<url>https://github.com/spt-oss/java-settings/tree/master</url>
+		<connection>scm:git:git@github.com:spt-oss/java-settings.git</connection>
 		<tag>HEAD</tag>
 	</scm>
 
