--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
-		<artifactId>java-parent</artifactId>
-		<version>1.5.3.0-SNAPSHOT</version>
+		<artifactId>spring-boot-starter-parent-custom</artifactId>
+		<version>1.5.3.0</version>
 	</parent>
 
 	<artifactId>java-settings</artifactId>
