--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,22 @@
 
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
-		<artifactId>spring-boot-starter-parent-custom</artifactId>
-		<version>1.5.3.0</version>
+		<artifactId>spt-maven-parent</artifactId>
+		<version>1.5.4.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>java-settings</artifactId>
-	<version>0.1.12-SNAPSHOT</version>
+	<artifactId>spt-java-settings</artifactId>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<description>Java development settings</description>
-	<url>https://github.com/spt-oss/java-settings</url>
+	<name>SPT Java settings</name>
+	<description>Java settings for SPT projects</description>
+	<url>https://github.com/spt-oss/spt-java-settings</url>
+	<inceptionYear>2016</inceptionYear>
 
 	<scm>
-		<url>https://github.com/spt-oss/java-settings/tree/master</url>
-		<connection>scm:git:git@github.com:spt-oss/java-settings.git</connection>
+		<url>https://github.com/spt-oss/spt-java-settings/tree/master</url>
+		<connection>scm:git:git@github.com:spt-oss/spt-java-settings.git</connection>
 		<tag>HEAD</tag>
 	</scm>
 
