--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>spt-java-settings</artifactId>
-	<version>0.1.0</version>
+	<version>0.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<description>Java settings for SPT projects</description>
@@ -20,7 +20,7 @@
 	<scm>
 		<url>https://github.com/spt-oss/spt-java-settings/tree/master</url>
 		<connection>scm:git:git@github.com:spt-oss/spt-java-settings.git</connection>
-		<tag>0.1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
