--- a/pom.xml
+++ b/pom.xml
@@ -6,22 +6,41 @@
 	<parent>
 		<groupId>com.github.spt-oss</groupId>
 		<artifactId>spt-java-parent</artifactId>
-		<version>1.5.8.0</version>
+		<version>2.0.3.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>spt-java-settings</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<artifactId>spt-cloud</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-	<description>Custom settings for Java projects</description>
-	<url>https://github.com/spt-oss/spt-java-settings</url>
-	<inceptionYear>2016</inceptionYear>
+	<description>Custom libraries for cloud projects</description>
+	<url>https://github.com/spt-oss/spt-cloud</url>
+	<inceptionYear>2017</inceptionYear>
+
+	<modules>
+		<module>spt-cloud-slack</module>
+	</modules>
 
 	<scm>
-		<url>https://github.com/spt-oss/spt-java-settings/tree/master</url>
-		<connection>scm:git:git@github.com:spt-oss/spt-java-settings.git</connection>
+		<url>https://github.com/spt-oss/spt-cloud/tree/master</url>
+		<connection>scm:git:git@github.com:spt-oss/spt-cloud.git</connection>
 		<tag>HEAD</tag>
 	</scm>
+
+	<properties>
+		<spring-boot-plus.version>2.0.3.0-SNAPSHOT</spring-boot-plus.version>
+		<spt-java-commons.version>1.8.0.1</spt-java-commons.version>
+	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.github.spt-oss</groupId>
+				<artifactId>spring-boot-starter-json-plus</artifactId>
+				<version>${spring-boot-plus.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<repositories>
 		<repository>
@@ -33,6 +52,25 @@
 			<url>https://oss.sonatype.org/content/groups/staging</url>
 		</repository>
 	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<configLocation>spt/settings/checkstyle/checkstyle.xml</configLocation>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.github.spt-oss</groupId>
+						<artifactId>spt-java-commons</artifactId>
+						<version>${spt-java-commons.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+	</build>
 
 	<profiles>
 		<profile>
